[package]
name = "blink_rs"
version = "0.1.0"
authors = ["Nathan Jent <nathanjent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
# The `leonardo-panic` example shows a more elaborate version.
panic-halt = "0.2.0"

[dependencies.avr-device]
version = "0.3.0"
features = ["atmega328p", "attiny85", "rt"]

#[dependencies.arduino-uno]
#git = "https://github.com/rahix/avr-hal"
#rev = "885e8ec"
# ^- Pin the dependency to a specific version.  You should use the latest
# commit hash from the avr-hal master branch.  You can find it here:
#
#    https://github.com/rahix/avr-hal/commits/master

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
